2008-09-06  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes part of bug #549968

	* gui/dialogs/comp-editor.c (comp_editor_init):
	Use the same mnemonic for "Recent Documents" as composer.

2008-09-04  Sankar P  <psankar@novell.com>

License Changes

	* gui/alarm-notify/util.c:
	* gui/dialogs/calendar-setup.c:
	* gui/e-day-view-time-item.c:
	* gui/e-meeting-list-view.c:
	* gui/misc.c:

2008-09-02  Sankar P  <psankar@novell.com>

License Changes

	* conduits/common/libecalendar-common-conduit.c:
	* gui/alarm-notify/alarm-notify-dialog.c:
	* gui/alarm-notify/alarm-notify-dialog.h:
	* gui/alarm-notify/alarm-notify.c:
	* gui/calendar-component.h:
	* gui/calendar-view-factory.c:
	* gui/calendar-view.c:
	* gui/comp-editor-factory.h:
	* gui/control-factory.c:
	* gui/dialogs/alarm-dialog.c:
	* gui/dialogs/alarm-list-dialog.c:
	* gui/dialogs/cal-attachment-select-file.c:
	* gui/dialogs/cancel-comp.c:
	* gui/dialogs/changed-comp.h:
	* gui/dialogs/comp-editor-page.h:
	* gui/dialogs/comp-editor-util.c:
	* gui/dialogs/comp-editor-util.h:
	* gui/dialogs/comp-editor.h:
	* gui/dialogs/e-delegate-dialog.c:
	* gui/dialogs/e-send-options-utils.h:
	* gui/dialogs/event-editor.c:
	* gui/dialogs/event-editor.h:
	* gui/dialogs/event-page.h:
	* gui/dialogs/memo-editor.c:
	* gui/dialogs/recur-comp.h:
	* gui/dialogs/schedule-page.c:
	* gui/dialogs/schedule-page.h:
	* gui/dialogs/send-comp.c:
	* gui/dialogs/task-details-page.c:
	* gui/dialogs/task-editor.c:
	* gui/dialogs/task-editor.h:
	* gui/e-cal-component-memo-preview.h:
	* gui/e-cal-config.c:
	* gui/e-cal-event.c:
	* gui/e-cal-list-view-config.c:
	* gui/e-cal-list-view.c:
	* gui/e-cal-menu.c:
	* gui/e-cal-model-calendar.c:
	* gui/e-cal-model-memos.c:
	* gui/e-cal-model.c:
	* gui/e-calendar-table-config.c:
	* gui/e-calendar-table.h:
	* gui/e-calendar-view.h:
	* gui/e-cell-date-edit-config.c:
	* gui/e-cell-date-edit-text.c:
	* gui/e-cell-date-edit-text.h:
	* gui/e-comp-editor-registry.c:
	* gui/e-comp-editor-registry.h: