@@ -1,3 +1,12 @@
+2008-09-08  Chenthill Palanisamy  <pchenthill@novell.com>
+
+	Fixes #544187
+	* calendar/gui/e-cal-model.c:
+	* calendar/gui/e-cal-model.h:
+	* calendar/gui/e-day-view.c:
+	* calendar/gui/e-week-view.c: Added a new signal
+	handler to update the views on comp deletion.
+
 2008-09-06  Matthew Barnes  <mbarnes@redhat.com>
 
 	** Fixes part of bug #549968
